--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="main">
         <div class = "chart-container">
-            <svg width="900" height="700" style="border: 1px solid #777;">
+            <svg width="870" height="700" style="border: 1px solid #777;">
             </svg>
             <div>
                 <label for="selectRegion">Select your region of choice: </label>
@@ -26,20 +26,26 @@
                 </select>
             </div>
         </div>
-        <div id = "legend">
-            <h3><u>Legend</u></h3>
-            <div class="legend-item">
-                <div class="legend-text">Public:</div>
-                <div class="legend-circle" style="background-color: green;"></div>
+        <div class = "side-container">
+            <div id = "legend">
+                <h3><u>Legend</u></h3>
+                <div class="legend-item">
+                    <div class="legend-text">Public:</div>
+                    <div class="legend-circle" style="background-color: green;"></div>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-text">Private:</div>
+                    <div class="legend-circle" style="background-color: purple;"></div>
+                </div>
+                <div class="legend-item">
+                    <div class="legend-text">Note: The sizes of the circles are scaled based on the college's undergraduate population size.</div>
+                </div>
             </div>
-            <div class="legend-item">
-                <div class="legend-text">Private:</div>
-                <div class="legend-circle" style="background-color: purple;"></div>
-            </div>
-            <div class="legend-item">
-                <div class="legend-text">Note: The sizes of the circles are scaled based on the college's undergraduate population size.</div>
-            </div>
+            <div id="race-chart">
+                <svg id="chart-svg" width ="550" height="500" style="border: 1px solid #777; margin-top: 37px;"></svg> 
+            </div> 
         </div>
+
     </div>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
