add title to visualization

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <div id="main">
+
         <div class = "chart-container">
-            <svg width="870" height="700" style="border: 1px solid #777;">
+            <div><b>UniFinder: A College Finance and Diversity Visualization Tool</b></div>
+            <svg width="870" height="700" style="border: 1px solid #777; margin-top: 4px;">
             </svg>
             <div>
                 <label for="selectRegion">Select your region of choice: </label>
@@ -28,7 +30,7 @@
         </div>
         <div class = "side-container">
             <div id = "legend">
-                <h3><u>Legend</u></h3>
+                <h3 style="margin-left: 5px;"><u>Legend</u></h3>
                 <div class="legend-item">
                     <div class="legend-text">Public:</div>
                     <div class="legend-circle" style="background-color: green;"></div>
